[metadata]
name = testscenarios
summary = Testscenarios, a pyunit extension for dependency injection
description-file = README
author = Testing-cabal
author-email = testing-cabal@lists.launchpad.net
home-page = https://launchpad.net/testscenarios
classifier = 
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[test]
test_module = testscenarios.tests
buffer=1
catch=1

[bdist_wheel]
universal = 1
