[metadata]
name = testscenarios
summary = Testscenarios, a pyunit extension for dependency injection
description_file = README.rst
author = Testing-cabal
author_email = testing-cabal@lists.launchpad.net
home_page = https://launchpad.net/testscenarios
classifier = 
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.8

[test]
test_module = testscenarios.tests
