[metadata]
name = testscenarios
summary = Testscenarios, a pyunit extension for dependency injection
description_file = README.rst
author = Testing-cabal
author-email = testing-cabal@lists.launchpad.net
home-page = https://launchpad.net/testscenarios
classifier =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.10

[test]
test_module = testscenarios.tests
